# Multi-Agent-StockPilot

./: .gitignore  .vercelignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/: dashboard.py  main.py  orchestrator.py
backend/agents/: analysis_agent.py  prediction_agent.py  scraping_agent.py
backend/tools/: alpha_vantage_tools.py  gemini_qa.py  glossary_rag.py  indicators.py  news_scraper.py  sentiment.py  yahoo_direct_tools.py  yfinance_tools.py
frontend/: app.py
